--- a/lab0_1/Makefile
+++ b/lab0_1/Makefile
@@ -1,9 +1,11 @@
-all:
+all:sign
 	cc -fno-builtin -Wall -ggdb -m32 -gstabs -nostdinc -fno-stack-protector -Os -c bootasm.S -o bootasm.o
 	@ld -m elf_i386 -nostdlib -N -e start -Ttext 0x7c00 bootasm.o  -o bootblock.o
 	@objcopy  -R .pdr -R .comment -R .note -S -O binary bootblock.o bootblock.out
 	./sign bootblock.out boot.img
+sign:
+	cc sign.c -o sign
 run:all
 	@qemu -hda boot.img
 clean:
-	rm -f *.o *.out *.img
+	rm -f *.o *.out *.img sign
